--- a/assets/css/templatemo-villa-agency.css
+++ b/assets/css/templatemo-villa-agency.css
@@ -759,7 +759,7 @@ Banner Style
 
 .main-banner .item span.category em {
   font-style: normal;
-  color: #574141;
+  color: #aaaaaa;
 }
 
 .main-banner .item h2 {
@@ -948,9 +948,7 @@ Video Style
 */
 
 .video {
-  background-image: url(../images/video-bg.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
+  background-color: #2c0b0e;
   background-position: center center;
   padding: 100px 0px 250px 0px;
   position: relative;
